--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>SHARE Notification Service</title>
+        <title>scrAPI</title>
         <link type="text/css" rel="stylesheet" href="static/css/style.css"/>
         <script type='text/javascript' src='static/js/jquery.js'></script>
         <script type='text/javascript' src='static/js/knockout-3.1.0.js'></script>
@@ -13,11 +13,11 @@
     <body>
         <div id="wrapper">
             <div id="title-box">
-                <h1>Welcome to SHARE</h1>
+                <h1>Welcome to scrAPI</h1>
             </div>
 
             <div id="form-box">
-                <!--<form class="form-search" action="http://localhost:1337/api/search" method="get" role="search">-->
+                <!--<form class="form-search" action="http://localhost:80/api/search" method="get" role="search">-->
                 <form class="form-search" data-bind= "submit: populate_results" role="search">
                     <div class="input-append">
                         <input type="text" data-bind= "value: keyword" class="search-query" name="q">
@@ -26,6 +26,7 @@
                 </form>
             </div>
             <div class="search-results" data-bind="html: response"></div>
+            <div class="attribution"><a href="http://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/A_tower_of_used_books_-_8446.jpg/800px-A_tower_of_used_books_-_8446.jpg">Image: A tower of used books </a> © <a href="http://www.royan.com.ar"> Jorge Royan </a><a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a></div>
         </div>
         <script type='text/javascript' src='static/js/populate.js'></script>
     </body>
