Added attitional fields on click

--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -27,12 +27,15 @@
             </div>
             <div class="search-results" data-bind="foreach: Article">
                 <!--<div class="jsonObject" id="no-result"><h2>No results found.</h2></div>-->
-                <div class="jsonObject">
-                    <h2><span data-bind="text:title"></span></h2>
-                    <p><span data-bind="text:contributors"></span></p>
-                    <p><strong>ID:</strong><span data-bind="text:article_id"></span></p>
-                    <p><strong>Source:</strong><span data-bind="text:source"></span></p>
+                <div class="jsonObject collapsed">
+                    <h2 class="header"><span data-bind="text:title"></span></h2>
+                    <p class="header"><span data-bind="text:contributors"></span></p>
+                    <p class="header"><strong>ID:</strong><span data-bind="text:article_id"></span></p>
+                    <p class="header"><strong>Source:</strong><span data-bind="text:source"></span></p>
+
+                    <div class="additional-content"><span data-bind="html:properties"></span></div>
                 </div>
+                
             </div>
             
             <div class="attribution"><a href="http://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/A_tower_of_used_books_-_8446.jpg/800px-A_tower_of_used_books_-_8446.jpg">Image: A tower of used books </a> © <a href="http://www.royan.com.ar"> Jorge Royan </a><a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a></div>
