UI design changes

--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>scrAPI</title>
+        <link type="text/css" rel="stylesheet" href="static/css/animate.css"/>
         <link type="text/css" rel="stylesheet" href="static/css/style.css"/>
         <link type="text/css" rel="stylesheet" href="static/css/loader.css"/>
         <script type='text/javascript' src='static/js/jquery.js'></script>
@@ -14,7 +15,7 @@
     <body>
         <div id="wrapper">
             <div id="title-box">
-                <h1>Welcome to scrAPI</h1>
+                <h1>WELCOME TO SCRAPI</h1>
             </div>
 
             <div id="form-box">
@@ -30,12 +31,14 @@
             <div class="search-results" data-bind="foreach: Article">
                 <!--<div class="jsonObject" id="no-result"><h2>No results found.</h2></div>-->
                 <div class="jsonObject collapsed">
-                    <h2 class="header"><span data-bind="text:title"></span></h2>
-                    <p class="header"><span data-bind="text:contributors"></span></p>
-                    <p class="header"><strong>ID:</strong><span data-bind="text:article_id"></span></p>
+                    <h2><span data-bind="text:title"></span></h2>
+                    <p><span data-bind="text:contributors"></span></p>
+                    <p><strong>ID:</strong><span data-bind="text:article_id"></span></p>
                     <p class="header"><strong>Source:</strong><span data-bind="text:source"></span></p>
 
                     <div class="additional-content"><span data-bind="html:properties"></span></div>
+
+                    <p class="expand">---------- More ----------</p>
                 </div>
             </div>
             <div class="search-results">
@@ -46,8 +49,13 @@
                 <div class="circle white"></div>
                 <div class="circle small"></div>
             </div>
+
+            <div class="buffer"></div>
             
-            <div class="attribution"><a href="http://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/A_tower_of_used_books_-_8446.jpg/800px-A_tower_of_used_books_-_8446.jpg">Image: A tower of used books </a> © <a href="http://www.royan.com.ar"> Jorge Royan </a><a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a></div>
+            <div class="attribution">
+                <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/A_tower_of_used_books_-_8446.jpg/800px-A_tower_of_used_books_-_8446.jpg">Image: A tower of used books </a> © <a href="http://www.royan.com.ar"> Jorge Royan </a><a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA-3.0</a>
+            </div>
+
         </div>
         <script type='text/javascript' src='static/js/populate.js'></script>
     </body>
