A start on getting search going.

--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -10,12 +10,12 @@
         <link type="text/css" rel="stylesheet" href="static/css/loader.css"/>
         <script type='text/javascript' src='static/js/jquery.js'></script>
         <script type='text/javascript' src='static/js/knockout-3.1.0.js'></script>
-
+        <script type='text/javascript' src='static/js/knockout.punches.js'></script>
     </head>
     <body>
         <div id="wrapper">
             <div id="title-box">
-                <h1>WELCOME TO SCRAPI</h1>
+                <h1>Welcome to the SHARE Notification Service Search</h1>
             </div>
 
             <div id="form-box">
@@ -57,9 +57,10 @@
             </div>
 
         </div>
-        <script type='text/javascript' src='static/js/populate.js'></script>
+        <script type='text/javascript' src='static/js/shareSearch.js'></script>
+        <script></script>
     </body>
     <footer>
-        Warning! This is the pre-alpha version!
+        Warning! This is the alpha version.
     </footer>
 </html>
