fixed static folder

--- a/website/static/html/index.html
+++ b/website/static/html/index.html
@@ -5,12 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>scrAPI</title>
-        <link type="text/css" rel="stylesheet" href="website/static/css/animate.css"/>
-        <link type="text/css" rel="stylesheet" href="website/static/css/style.css"/>
-        <link type="text/css" rel="stylesheet" href="website/static/css/loader.css"/>
-        <script type='text/javascript' src='website/static/js/jquery.js'></script>
-        <script type='text/javascript' src='website/static/js/knockout-3.1.0.js'></script>
-        <script type='text/javascript' src='website/static/js/knockout.punches.js'></script>
+        <link type="text/css" rel="stylesheet" href="static/css/animate.css"/>
+        <link type="text/css" rel="stylesheet" href="static/css/style.css"/>
+        <link type="text/css" rel="stylesheet" href="static/css/loader.css"/>
+        <script type='text/javascript' src='static/js/jquery.js'></script>
+        <script type='text/javascript' src='static/js/knockout-3.1.0.js'></script>
+        <script type='text/javascript' src='static/js/knockout.punches.js'></script>
     </head>
     <body>
         <div id="searchControls">
